--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <!-- aside posizionato a sinistra contente "header spotify" la nav home - cerca - la tua libreria + playlist (con display none);
+    top main con effettua upgrade display fixed e bgcolor con trasparenza;
+    bottom main con tutti i contenuti musicali;
+    footer diviso in 3 parti display fixed sullo stesso piano del top main. -->
+
 </body>
 </html>
