--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     top main con effettua upgrade display fixed e bgcolor con trasparenza;
     bottom main con tutti i contenuti musicali;
     footer diviso in 3 parti display fixed sullo stesso piano del top main. -->
+    <section class="row">
+        <aside></aside>
+        <main>
+            <section class="header-main">
 
+            </section>
+            <section class="bottom-main">
+
+            </section>
+        </main>
+    </section>
+    
+    <footer>
+        <div class="left-foot"></div>
+        <div class="mid-foot"></div>
+        <div class="right-foot"></div>
+    </footer>
+    
 </body>
 </html>
