--- a/index.html
+++ b/index.html
@@ -12,25 +12,29 @@
     top main con effettua upgrade display fixed e bgcolor con trasparenza;
     bottom main con tutti i contenuti musicali;
     footer diviso in 3 parti display fixed sullo stesso piano del top main. -->
-    <section class="row">
-        <aside></aside>
+    <section class="corpo row">
+        <aside>
+
+            <div class="top-side">
+                <img src="img/logo-small.svg" alt="logo spotify">
+                <img src="img/home.svg" alt="logo home">
+                <img src="img/search.svg" alt="lente ingrandimento">
+                <img src="img/libreria.svg" alt="logo libreria">
+            </div>
+
+            <div class="bottom-side">
+                <img id="download" src="img/download.svg" alt="logo download">
+                <img id="user" src="img/profile.svg" alt="logo profilo">
+            </div>
+            
+            
+        </aside>
         <main>
             <section class="header-main">
 
             </section>
             <section class="content-main">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore, eligendi enim vitae rerum vero ratione ad voluptatibus recusandae delectus! Eos consequuntur beatae voluptate voluptas ratione saepe iusto harum. Qui.
-                Iusto labore soluta amet voluptatum sapiente eum earum dolores provident facilis tenetur, necessitatibus consequatur maiores ratione libero debitis praesentium, maxime veniam vel exercitationem architecto reprehenderit esse odio? Iste, et temporibus!
-                Sequi, quidem consequuntur impedit eligendi illum odit nam voluptatibus animi quia adipisci enim nemo quibusdam natus accusamus vero neque deserunt quo voluptate maiores temporibus. Explicabo reiciendis omnis dolorem quis ullam.
-                Dolorum modi exercitationem temporibus. Id ad, exercitationem, molestiae necessitatibus vel labore fugiat maxime iste iure voluptate accusantium ex eum soluta, quasi repudiandae? Possimus dicta natus aut et assumenda, blanditiis vitae.
-                Ab, ratione. Aliquid enim alias sint debitis voluptatem eligendi aliquam nostrum quaerat assumenda rem tenetur quas quasi voluptatum ut consequatur, perferendis excepturi velit tempore temporibus illum nam cupiditate necessitatibus ipsa?
-                Quidem eos tempore maiores laboriosam at soluta repudiandae, ea quae voluptas repellat animi sapiente repellendus asperiores excepturi odit suscipit voluptatem rerum? Laborum voluptates consequatur quo nulla nisi reiciendis debitis quis?
-                Sed cupiditate fugit eaque blanditiis minima nisi, magni mollitia non magnam repellat tempora reprehenderit ratione praesentium inventore optio quidem consequuntur aspernatur iste expedita, aliquid maiores! Nihil facilis voluptates illum. Nostrum!
-                Cumque, nisi quas. Cumque expedita quaerat, ad debitis mollitia tempore? Facere quas accusantium non quod aut est architecto et amet, aliquid dicta aperiam asperiores. Dicta nostrum voluptatum modi cumque quod.
-                Quaerat harum veniam deserunt ipsam culpa earum, atque voluptate itaque placeat illo pariatur quidem natus, fuga magni, aspernatur dolor asperiores illum? Quod magnam consequatur dolore reprehenderit tempore illum. Praesentium, molestiae.
-                Exercitationem ipsa possimus vero architecto alias aspernatur ut obcaecati illo dignissimos vitae facilis, commodi, recusandae praesentium amet. Officia, consequuntur repudiandae quae, pariatur mollitia soluta rerum veritatis est, asperiores quod doloribus.
-                Illum quam voluptate fuga! Praesentium, dolorem. Rerum at, ut harum culpa iure earum doloremque dolore excepturi alias sint nobis tempora autem accusantium eum accusamus soluta totam. Laborum earum delectus non.
-                Ipsa iste explicabo labore sequi sit. Nesciunt, error provident. Impedit enim repellat nulla rem est tenetur adipisci ea eius consequatur aut asperiores, amet, veritatis molestias! Minus, numquam. Repellendus, harum blanditiis?
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore, eligendi enim vitae rerum vero ratione ad voluptatibus recusandae delectus! Eos consequuntur beatae voluptate voluptas ratione saepe iusto harum.
                 Numquam eveniet sunt maxime cumque sapiente sequi, est voluptas, minima labore quasi autem et iusto ullam recusandae soluta quod itaque deleniti doloribus quam similique magnam asperiores? Rerum, rem assumenda! Aspernatur.
                 Ipsum repellat sit recusandae fugiat quos beatae deserunt corrupti saepe in voluptate quisquam voluptatibus nobis eveniet, vitae neque tempore? Cupiditate, eius porro similique praesentium nemo facilis molestias possimus laudantium ex?
                 Consequuntur consectetur veritatis impedit ipsa illum, ex delectus veniam a commodi, eius sed iure est fugiat facilis id iste nesciunt temporibus molestias! Amet tempora eius asperiores rerum, unde dignissimos nostrum.
@@ -40,18 +44,6 @@
                 Incidunt iste assumenda quam dolores modi eius. A, earum tempore porro tempora commodi debitis maiores esse consectetur eaque dicta minus nulla ab illo dolores quo suscipit vitae est voluptates neque.
                 Sunt reprehenderit impedit illo deleniti nostrum atque nisi doloremque, pariatur excepturi. Dicta soluta ullam numquam vitae recusandae sequi cumque ipsum, qui omnis sit mollitia voluptatum vero? Sit incidunt ipsum soluta.
                 Cupiditate tenetur in aperiam facilis. Neque quis maiores animi quaerat modi voluptates blanditiis vel in quia excepturi nostrum alias, similique quo? Repellendus ipsa rem rerum qui dolores, earum quaerat ullam?
-                Molestias minima distinctio officia libero tempore, hic corrupti, eos, esse nesciunt est provident expedita? Quos dolor ea ad cumque exercitationem sint, perferendis maiores maxime dignissimos nam cupiditate optio corrupti corporis.
-                Facere sint nam cumque! Praesentium dolor explicabo ducimus autem, error nisi illum vel assumenda temporibus sunt quod id, aspernatur magni aliquid earum quia quas distinctio! Delectus recusandae omnis ducimus a?
-                Consequuntur blanditiis vitae voluptate fuga natus quod nesciunt ea sunt. Quibusdam natus quo beatae, praesentium aliquam modi corporis eum eius numquam repudiandae deserunt ipsam, possimus ab esse nam neque eligendi.
-                Ipsum porro omnis, vel iusto maxime atque illum iste a incidunt numquam nihil, veniam architecto ratione aliquid alias. Rem, sapiente. Provident dolore cum voluptatem harum suscipit voluptates rerum doloribus commodi.
-                Veniam assumenda autem illum a, harum corrupti labore optio fuga? Provident dolor porro numquam, cumque minus non libero nulla. Tempore perspiciatis expedita nobis ratione cum aliquam optio fuga quam dolores.
-                Soluta, aspernatur minus voluptates est sint eligendi voluptate? Est at asperiores impedit eius perspiciatis deleniti consectetur nostrum, voluptates vel nobis ipsam distinctio ea sed, ad repudiandae repellat veritatis. Voluptates, facilis!
-                Laboriosam iusto enim nemo ipsum ducimus, tempore, placeat fugit ullam debitis reiciendis suscipit eaque, voluptatum quas harum eius? Expedita assumenda iste officia dignissimos dolor amet beatae nam! Sit, asperiores cupiditate!
-                Repellendus libero animi eum at corporis quia adipisci dolore inventore doloribus ad laudantium excepturi porro quasi id, cupiditate nemo iure exercitationem neque, corrupti eius voluptates illo? Sint eos excepturi minus?
-                Eum debitis maxime, voluptates unde nam itaque laudantium laboriosam? Hic eligendi consequatur voluptas fuga officia voluptatem provident iusto quos deserunt voluptatibus sapiente laborum in, quasi nam cumque quod corporis eum!
-                Assumenda voluptatibus officia totam, ullam quidem distinctio odio vel, consequatur quas necessitatibus quod reiciendis mollitia? Voluptate animi consectetur illum? Voluptatum non nobis dolorem molestias distinctio numquam a eligendi minima earum!
-                Qui totam a magni ipsum saepe est labore, nesciunt enim doloribus, dolore nulla quia, atque praesentium harum tenetur alias minima. Doloribus sunt debitis ratione sint quidem amet repudiandae aspernatur accusantium.
-                Veritatis eos ipsum mollitia quibusdam deleniti dolorum reiciendis? Obcaecati debitis error nihil, beatae tenetur iure dicta at accusamus magni! Dolorem consequatur voluptates ab dicta blanditiis praesentium quasi sint iste labore!
                 Nemo aliquam corporis iste neque vero qui deleniti quidem voluptas, eum esse reprehenderit fuga nisi nihil est incidunt optio, cum rem dolorem tempora dolore quas blanditiis nobis dolorum. Nostrum, sequi.</p>
             </section>
         </main>
