--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Web</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="debug">
     <!-- aside posizionato a sinistra contente "header spotify" la nav home - cerca - la tua libreria + playlist (con display none);
     top main con effettua upgrade display fixed e bgcolor con trasparenza;
     bottom main con tutti i contenuti musicali;
     footer diviso in 3 parti display fixed sullo stesso piano del top main. -->
-    <section class="corpo row">
+    <section class="row">
         <aside>
 
             <div class="top-side">
@@ -31,20 +34,16 @@
         </aside>
         <main>
             <section class="header-main">
-
+                <a href="#">effettua l'upgrade</a>
             </section>
             <section class="content-main">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore, eligendi enim vitae rerum vero ratione ad voluptatibus recusandae delectus! Eos consequuntur beatae voluptate voluptas ratione saepe iusto harum.
                 Numquam eveniet sunt maxime cumque sapiente sequi, est voluptas, minima labore quasi autem et iusto ullam recusandae soluta quod itaque deleniti doloribus quam similique magnam asperiores? Rerum, rem assumenda! Aspernatur.
-                Ipsum repellat sit recusandae fugiat quos beatae deserunt corrupti saepe in voluptate quisquam voluptatibus nobis eveniet, vitae neque tempore? Cupiditate, eius porro similique praesentium nemo facilis molestias possimus laudantium ex?
-                Consequuntur consectetur veritatis impedit ipsa illum, ex delectus veniam a commodi, eius sed iure est fugiat facilis id iste nesciunt temporibus molestias! Amet tempora eius asperiores rerum, unde dignissimos nostrum.
-                Ipsum quod culpa amet fugiat impedit quasi ducimus corrupti facilis dolores accusantium harum illo minima fuga tempore ad ut blanditiis dolore, molestias tenetur laudantium! Dicta dolorum ex aspernatur recusandae architecto?
-                Quisquam, vel sint libero rem possimus beatae voluptatibus. Nostrum unde illum ex pariatur, earum in excepturi sequi, aliquid voluptatibus nobis, nisi expedita adipisci culpa fugiat dignissimos doloribus voluptates nihil ut.
-                Earum accusamus suscipit autem expedita accusantium, quas debitis excepturi consequuntur sit? Corporis saepe magni corrupti itaque, ea, quam dolore delectus amet minima illo eius omnis veniam officia culpa, aliquid rerum.
-                Incidunt iste assumenda quam dolores modi eius. A, earum tempore porro tempora commodi debitis maiores esse consectetur eaque dicta minus nulla ab illo dolores quo suscipit vitae est voluptates neque.
-                Sunt reprehenderit impedit illo deleniti nostrum atque nisi doloremque, pariatur excepturi. Dicta soluta ullam numquam vitae recusandae sequi cumque ipsum, qui omnis sit mollitia voluptatum vero? Sit incidunt ipsum soluta.
-                Cupiditate tenetur in aperiam facilis. Neque quis maiores animi quaerat modi voluptates blanditiis vel in quia excepturi nostrum alias, similique quo? Repellendus ipsa rem rerum qui dolores, earum quaerat ullam?
-                Nemo aliquam corporis iste neque vero qui deleniti quidem voluptas, eum esse reprehenderit fuga nisi nihil est incidunt optio, cum rem dolorem tempora dolore quas blanditiis nobis dolorum. Nostrum, sequi.</p>
+                Nemo aliquam corporis iste neque vero qui deleniti quidem voluptas, eum esse reprehenderit fuga nisi nihil est incidunt optio, cum rem dolorem tempora dolore quas blanditiis nobis dolorum. Nostrum, sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, deserunt tempore cumque pariatur quam dolor magnam voluptates quis sint, iusto delectus, quia commodi omnis alias obcaecati laudantium dolorem repellendus dicta?
+                Eius quam veritatis blanditiis temporibus quidem voluptatibus deserunt fugit illo velit in sapiente minima, ut libero animi sint dicta officia, molestiae nostrum maxime ratione, deleniti autem expedita est? Itaque, expedita.
+                Nisi cum deleniti eaque totam nesciunt neque iusto beatae, magni, exercitationem eligendi, ipsam at placeat consectetur quo quidem sed enim earum? Quae dicta nesciunt totam labore perferendis reprehenderit hic voluptatibus!
+                Consequuntur quia quo sit amet hic vel dolorem vitae molestias, impedit omnis quas cupiditate. Ipsum, nemo quam. Odio odit earum, recusandae laudantium nostrum tempora eveniet provident assumenda repudiandae, accusantium consectetur.
+                Quam voluptatem aliquid alias placeat aperiam vel officia explicabo eius voluptate ratione, nulla laudantium nam architecto maiores quibusdam? In iure aliquam porro quibusdam quaerat? Harum fugit maiores eaque nesciunt expedita!</p>
             </section>
         </main>
     </section>
