--- a/index.html
+++ b/index.html
@@ -76,13 +76,69 @@
                 <a href="#">effettua l'upgrade</a>
             </section>
             <section class="content-main">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore, eligendi enim vitae rerum vero ratione ad voluptatibus recusandae delectus! Eos consequuntur beatae voluptate voluptas ratione saepe iusto harum.
-                Numquam eveniet sunt maxime cumque sapiente sequi, est voluptas, minima labore quasi autem et iusto ullam recusandae soluta quod itaque deleniti doloribus quam similique magnam asperiores? Rerum, rem assumenda! Aspernatur.
-                Nemo aliquam corporis iste neque vero qui deleniti quidem voluptas, eum esse reprehenderit fuga nisi nihil est incidunt optio, cum rem dolorem tempora dolore quas blanditiis nobis dolorum. Nostrum, sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, deserunt tempore cumque pariatur quam dolor magnam voluptates quis sint, iusto delectus, quia commodi omnis alias obcaecati laudantium dolorem repellendus dicta?
-                Eius quam veritatis blanditiis temporibus quidem voluptatibus deserunt fugit illo velit in sapiente minima, ut libero animi sint dicta officia, molestiae nostrum maxime ratione, deleniti autem expedita est? Itaque, expedita.
-                Nisi cum deleniti eaque totam nesciunt neque iusto beatae, magni, exercitationem eligendi, ipsam at placeat consectetur quo quidem sed enim earum? Quae dicta nesciunt totam labore perferendis reprehenderit hic voluptatibus!
-                Consequuntur quia quo sit amet hic vel dolorem vitae molestias, impedit omnis quas cupiditate. Ipsum, nemo quam. Odio odit earum, recusandae laudantium nostrum tempora eveniet provident assumenda repudiandae, accusantium consectetur.
-                Quam voluptatem aliquid alias placeat aperiam vel officia explicabo eius voluptate ratione, nulla laudantium nam architecto maiores quibusdam? In iure aliquam porro quibusdam quaerat? Harum fugit maiores eaque nesciunt expedita!</p>
+                
+                <nav>
+                    <a href="#">in evidenza</a>
+                    <a href="#">podcast</a>
+                    <a href="#">classifiche</a>
+                    <a href="#">generi e mood</a>
+                    <a href="#">nuove uscite</a>
+                    <a href="#">scopri</a>
+                </nav>
+
+                <h2>Recently played</h2>
+
+                <div class="songs">
+
+                    <div class="song-box">
+                        <img src="img/metal_lifting.jpg" alt="metal">
+                        <div class="song-description">
+                            <h5>Heavy Metal</h5>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+
+                    <div class="song-box">
+                        <img src="img/stranger.jpeg" alt="stranger things">
+                        <div class="song-description">
+                            <h5>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h5>
+                            <h6>Kyle Dixon & Michael Stein</h6>
+                        </div>
+                    </div>
+
+                    <div class="song-box">
+                        <img src="img/aquietplace.jpeg" alt="a quiet place">
+                        <div class="song-description">
+                            <h5>A quiet place</h5>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+
+                    <div class="song-box">
+                        <img src="img/split.jpeg" alt="split">
+                        <div class="song-description">
+                            <h5>Split</h5>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+
+                    <div class="song-box">
+                        <img src="img/cure.jpeg" alt="a cure for wellness">
+                        <div class="song-description">
+                            <h5>A cure for wellness</h5>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+
+                    <div class="song-box">
+                        <img src="img/sinister.jpeg" alt="sinister">
+                        <div class="song-description">
+                            <h5>Sinister</h5>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+
+                </div>
             </section>
         </main>
     </section>
