--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                 <h2>Recently played</h2>
 
-                <div class="songs">
+                <div class="songs-list">
 
                     <div class="song-box">
                         <img src="img/metal_lifting.jpg" alt="metal">
@@ -139,6 +139,47 @@
                     </div>
 
                 </div>
+
+                <h2>Creato per John Doe</h2>
+
+                <h3>Più ascolti, più accurati saranno i suggerimenti.</h3>
+                
+                <div class="songs-list">
+                    <div class="song-box">
+                        <img src="img/radar.jpeg" alt="il tuo radar">
+                        <div class="song-description">
+                            <h5>Release Radar</h5>
+                        </div>
+                    </div>
+
+                    <div class="song-box">
+                        <img src="img/mixdaily.jpeg" alt="il tuo daily mix">
+                        <div class="song-description">
+                            <h5>Daily Mix 1</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <h2>Artisti più popolari</h2>
+
+                <h3>Più ascolti, più accurati saranno i suggerimenti.</h3>
+                
+                <div class="songs-list">
+                    <div class="song-box">
+                        <img src="img/youg.jpeg" alt="young" class="round">
+                        <div class="song-description">
+                            <h5>Youg</h5>
+                        </div>
+                    </div>
+
+                    <div class="song-box">
+                        <img src="img/einaudi.jpeg" alt="einaudi" class="round">
+                        <div class="song-description">
+                            <h5>Ludovico Einaudi</h5>
+                        </div>
+                    </div>
+                </div>
+
             </section>
         </main>
     </section>
