--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <section class="content-main">
                 
                 <nav>
-                    <a href="#">in evidenza</a>
+                    <a href="#" id="bord-btm">in evidenza</a>
                     <a href="#">podcast</a>
                     <a href="#">classifiche</a>
                     <a href="#">generi e mood</a>
