--- a/index.html
+++ b/index.html
@@ -186,7 +186,10 @@
     
     <footer>
         <div class="left-foot"></div>
-        <div class="mid-foot"></div>
+        <div class="mid-foot">
+            <div class="top-mid-foot">img lettore mp3</div>
+            <div class="btm-mid-foot"></div>
+        </div>
         <div class="right-foot"></div>
     </footer>
     
