--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <section class="content-main">
                 
                 <nav>
-                    <a href="#" id="bord-btm">in evidenza</a>
+                    <a href="#">in e<span id="bord-btm">vide</span>nza</a>
                     <a href="#">podcast</a>
                     <a href="#">classifiche</a>
                     <a href="#">generi e mood</a>
@@ -185,7 +185,22 @@
     </section>
     
     <footer>
-        <div class="left-foot"></div>
+
+        <div class="left-foot">
+            <img src="img/sinister.jpeg" alt="sinister">
+            <div class="song-info">
+                <h5 class="artist">Sinister</h5>
+                <div id="title">
+                    <h6>Brano</h6>
+                    <h6>Nome</h6>
+                </div>
+            </div>
+            <div class="song-icon">
+                <i class="far fa-heart"></i>
+                <i class="far fa-folder"></i>
+            </div>
+        </div>
+
         <div class="mid-foot">
             <div class="top-mid-foot">img lettore mp3</div>
             <div class="btm-mid-foot"></div>
