--- a/index.html
+++ b/index.html
@@ -202,8 +202,21 @@
         </div>
 
         <div class="mid-foot">
-            <div class="top-mid-foot">img lettore mp3</div>
-            <div class="btm-mid-foot"></div>
+
+            <div class="top-mid-foot">
+                <i class="fas fa-random"></i>
+                <i class="fas fa-step-backward"></i>
+                <i id="play" class="far fa-play-circle"></i>
+                <i class="fas fa-step-forward"></i>
+                <i class="fas fa-redo-alt"></i>
+            </div>
+
+            <div class="btm-mid-foot">
+                <h5>0:25</h5>
+                <div class="fake-bar"></div>
+                <h5>4:35</h5>
+            </div>
+
         </div>
         <div class="right-foot"></div>
     </footer>
