--- a/index.html
+++ b/index.html
@@ -218,7 +218,14 @@
             </div>
 
         </div>
-        <div class="right-foot"></div>
+
+        <div class="right-foot">
+            <i class="fas fa-list"></i>
+            <i class="fas fa-desktop"></i>
+            <i class="fas fa-volume-up"></i>
+            <div class="fake-bar"></div>
+        </div>
+
     </footer>
     
 </body>
