hover barra laterale

--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
                     <div id="crea-playlist">
                         <a href="#"><i class="fas fa-plus"></i>Crea Playlist</a>
                     </div>
-                    <a href="#">Nome Playlist</a>
-                    <a href="#">Nome Playlist</a>
-                    <a href="#">Nome Playlist</a>
-                    <a href="#">Nome Playlist</a>
-                    <a href="#">Nome Playlist</a>
-                    <a href="#">Nome Playlist</a>
-                    <a href="#">Nome Playlist</a>
+                    <ul>
+                        <li><a href="#">Nome Playlist</a></li>
+                        <li><a href="#">Nome Playlist</a></li>
+                        <li><a href="#">Nome Playlist</a></li>
+                        <li><a href="#">Nome Playlist</a></li>
+                        <li><a href="#">Nome Playlist</a></li>
+                        <li><a href="#">Nome Playlist</a></li>
+                        <li><a href="#">Nome Playlist</a></li>
+                    </ul>
+    
                 </div>
                 
 
